# cuchabot

./: .gitignore  Cargo.toml  Shuttle.toml
.github/workflows/: shuttle-deploy.yml
.shuttle/: config.toml
src/: main.rs
src/chatgpt/: chatgpt_builder.rs  mod.rs
src/commands/: commands_handler.rs  mod.rs
src/data/: bst.rs  data.rs  mod.rs  osu_data.rs  stack.rs
src/events/: event_handler.rs  mod.rs
src/message/: message.rs
src/notifications/: thread_handler.rs
src/ollama/: mod.rs
src/ollama/chat/: chat.rs
src/osu/: embed.rs  mod.rs  osu_client.rs  pp_check.rs  user_activity.rs
src/osu/dto/: dto_osu_score.rs  mod.rs
src/scraping/: mod.rs  scraping_builder.rs
src/slash_commands/: mod.rs  slash_commands_handler.rs
