[package]
name = "cuchabot_local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
dotenv = "0.15.0"
chatgpt_rs = "1.1.10"
tokio = {version = "1.28.1", features = ["rt-multi-thread"]}
serde_json = "1.0.96"