[package]
name = "cuchabot_local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0.68"
poise = "0.6.1"
dotenv = "0.15.0"
chatgpt_rs = "1.1.10"
tokio = {version = "1.28.1", features = ["rt-multi-thread"]}
reqwest = {version = "0.11.17", features = ["blocking", "json"]}
scraper = "0.15.0"
shuttle-poise = "0.21.0"
shuttle-secrets = "0.21.0"
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer" }
num-format = "0.4.4"
